lib/parse/src/snapshots/parse__parsers__tests__import__fail_to_parse_private_external_module_directory.snap
---
source: lib/parse/src/parsers.rs
expression: "external_module_path().parse(stream(source,\n                                    \"\")).map_err(|error|\n                                                     ParseError::new(source,\n                                                                     \"\",\n                                                                     error)).err()"

---
Some(
    ParseError {
        message: "unexpected private module path",
        expected: [
            "public module path",
        ],
        position: Position {
            path: "",
            line_number: 1,
            column_number: 5,
            line: "Foo'bar'Baz",
        },
    },
)
